--- a/k8s/nginx.yaml
+++ b/k8s/nginx.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: krmp-d2hub-idock.9rum.cc/goorm/nginx
+        image: nginx:latest
         ports:
         - containerPort: 80
         volumeMounts:
