--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: default
 resources:
   - nginx.yaml
-  - mysql.yaml
+  - mariadb.yaml
   - backend.yaml
   - frontend.yaml
 configMapGenerator:
